[tool.poetry]
name = "alien-invasion"
version = "0.1.0"
description = ""
authors = ["Kazakov Kostya <leap74rus@gmail.com>"]
readme = "README.md"
packages = [{include = "alien_invasion"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.1.0"
flake8 = "^6.0.0"
pygame = "2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
